# bogofilter

./: .cvsignore  .lclintrc  AUTHORS  CHANGES-0.10  CHANGES-0.11  CHANGES-0.12  CHANGES-0.13  CHANGES-0.14  CHANGES-0.15  CHANGES-0.16  CHANGES-0.17  CHANGES-0.9x  Doxyfile  GETTING.STARTED  INSTALL  Makefile.am  Makefile.in  NEWS  NEWS-0.11  NEWS-0.12  NEWS-0.13  NEWS-0.14  NEWS-0.15  NEWS-0.16  NEWS-0.17  NEWS-0.9x  NEWS.0  README  README.cvs  README.experimental  README.hp-ux  README.svn  RELEASE.NOTES  RELEASE.NOTES-0.11  RELEASE.NOTES-0.12  RELEASE.NOTES-0.13  RELEASE.NOTES-0.14  RELEASE.NOTES-0.16  RELEASE.NOTES-0.17  RELEASE.NOTES-0.93  (+114 more)
bogofilter/: .cvsignore  .gitignore  .lclintrc  AUTHORS  CHANGES-0.10  CHANGES-0.10.0  CHANGES-0.11  CHANGES-0.12  CHANGES-0.13  CHANGES-0.14  CHANGES-0.15  CHANGES-0.16  CHANGES-0.17  CHANGES-0.18  CHANGES-0.90  CHANGES-0.9x  DEBUGGING  Doxyfile  GETTING.STARTED  INSTALL  METHODS  Makefile.am  Makefile.in  NEWS  NEWS-0.13  NEWS-0.14  NEWS-0.15  NEWS-0.16  NEWS-0.17  NEWS-0.18  NEWS-0.90  NEWS-0.9x  NEWS.0  README  README.BUGS  README.cvs  README.dcdflib  README.experimental  README.freebsd  README.hp-ux  (+125 more)
bogofilter/contrib/: Makefile.am  README.bogopass  README.contrib  README.randomtrain  README.unbase64  bilbogrep.c  bogo.R  bogofilter-milter.pl  bogofilter-qfe  bogogrep.c  bogominitrain.pl  bogopass  mailfilter.example  parmtest.sh  procmailrc.example  randomtrain  randomtrain.sh  register-maildir  scramble  scramble.sh  trainbogo.sh  unbase64  vm-bogofilter.el
bogofilter/dcdflib/: Makefile.am
bogofilter/dcdflib.c/src/: Makefile.am
bogofilter/dcdflib/doc/: Makefile.am
bogofilter/dcdflib/src/: Makefile.am  dcdflib.c
bogofilter/doc/: .cvsignore  Makefile.am  Makefile.in  README.Robinson  README.db  README.sqlite  README.tdb  README.validation  bf_compact.1in  bf_compact.xml  bf_copy.1in  bf_copy.xml  bf_resize.xml  bf_tar.1in  bf_tar.xml  bogofilter-SA-2002-01  bogofilter-SA-2004-01  bogofilter-SA-2005-01  bogofilter-SA-2010-01  bogofilter-faq-bg.html  bogofilter-faq-fr.html  bogofilter-faq-it.html  bogofilter-faq.html  bogofilter-tuning.HOWTO.html  bogofilter.1in  bogofilter.xml  bogolexer.1in  bogolexer.xml  bogotune.1in  bogotune.htmlin  bogotune.xml  bogoupgrade.1in  bogoupgrade.xml  bogoutil.1in  bogoutil.xml  integrating-with-postfix  integrating-with-qmail
bogofilter/doc/programmer/: README.RISC-OS  README.hp-ux  README.memory-checking  README.osx
bogofilter/src/: .cvsignore  .gitignore  .lclintrc  DEBUGGING  Makefile.am  Makefile.in  base64.c  base64.h  bf_abort.c  bf_compact  bf_compact.in  bf_copy  bf_copy.in  bf_exit.c  bf_resize  bf_resize.in  bf_tar  bf_tar.in  bftypes.h  bogoQDBMupgrade.c  bogoconfig.c  bogoconfig.h  bogofilter.c  bogofilter.h  bogohist.c  bogohome.c  bogohome.h  bogolex.sh  bogolexer.c  bogomain.c  bogoreader.c  bogoreader.h  bogotune.c  bogotune.h  bogoupgrade  bogoupgrade.in  bogoutil.c  bogowordfreq.c  bool.c  buff.c  (+149 more)
bogofilter/src/dcdflib/: Makefile.am
bogofilter/src/tests/: .cvsignore  Makefile.am  Makefile.in  ctype.c  deb64.c  deqp.c  printcore  spam_header_name.c  t.MH  t._abort  t.abort  t.bf_compact  t.bfpath  t.env  (+62 more)
bogofilter/tests/: Makefile.am  deb64.c  dehex.c  deqp.c  dumbhead.c  t.frame  t.grftest  t.ignore_spam_header  t.integrity  t.integrity.uu  t.integrity2  t.lexer  t.lock1  t.lock2  t.nullstatsprefix  t.save  t.score1  t.score2  t.systest
bogofilter/trio/: Makefile.am  Makefile.in  README  trio.c  trio.h  triodef.h  trionan.h  triop.h  triostr.c
bogofilter/tuning/: Makefile.am  README  README.bogotune  bogol  bogol.1  bogolex.sh  bogotune  distrib  setR  sizes  smindev.R  smindev.sh  tuning.R  tuning.sh
contrib/: .cvsignore  Makefile.am  QDBM-transactions.patch  README.bogopass  README.contrib  README.unbase64  bogofilter-milter.pl  bogofilter-qfe  bogominitrain.pl  bogopass  dot-qmail-bogofilter-default  mailfilter.example  mime.get.rfc822  procmailrc.example  randomtrain  scramble  scramble.sh  trainbogo.sh
doc/: .cvsignore  Makefile.am  README.Robinson  README.db  README.sqlite  README.tdb  README.validation  bf_compact.xml  bf_copy.xml  bf_tar.xml  bogofilter-SA-2002-01  bogofilter-SA-2004-01  bogofilter-SA-2005-01  bogofilter-faq-fr.html  bogofilter-faq-it.html  bogofilter-faq.html  bogofilter-tuning.HOWTO  bogofilter.xml  bogolexer.xml  bogotune-faq.html  bogotune.1  bogotune.xml  bogoupgrade.xml  bogoutil.xml  integrating-with-postfix  integrating-with-qmail
doc/programmer/: README.RISC-OS  README.osx
src/: .cvsignore  Makefile-static.am  Makefile.am  base64.c  base64.h  bf_compact  bf_compact.in  bf_copy  bf_exit.c  bf_resize  bf_tar  bf_tar.in  bftypes.h  bogoQDBMupgrade.c  bogoconfig.c  bogoconfig.h  bogofilter.c  bogofilter.h  bogohist.c  bogohist.h  bogohome.c  bogolex.sh  bogolexer.c  bogomain.c  bogomain.h  bogoreader.c  bogoreader.h  bogotune.c  bogoupgrade  bogoupgrade.in  bogoutil.c  bogowordfreq.c  bool.c  buff.c  buff.h  charset.c  charset.h  charset_iconv.c  collect.c  collect.h  (+128 more)
src/tests/: .cvsignore  Makefile.am  deb64.c  dehex.c  deqp.c  dumbhead.c  leakmem.c  printcore  t.MH  t.abort  t.bfpath  t.block.on.subnets  t.bogodir  t.bogoutil  t.bogoutil-hist  t.bulkmode  t.degen  t.dump.load  t.encoding  t.env  t.escaped.html  t.escaped.url  t.folded_rfc2047  t.frame  t.grftest  t.ignore_spam_header  t.integrity  t.integrity3  t.leakfind  t.lexer  t.lexer.mbx  t.lock1  t.lock2  t.lock3  t.longoptions  t.maildir  t.maint  t.msgaddr  t.multiple.tokens  t.multiple.tokens.body  (+23 more)
tests/: .cvsignore  Makefile.am  deb64.c  dumbhead.c  spam_header_name.c  t.frame  t.grftest  t.ignore_spam_header  t.integrity  t.lexer  t.lock1  t.lock2  t.save  t.score1  t.score2  t.skel  t.systest
tests/bogofilter/: Makefile.am  t.grftest  t.lexer.mbx  t.robx  t.split  t.systest  t.valgrind
tests/bogoutil/: Makefile.am  driver.sh  output-1.txt  output-2.txt  output-4.txt  output-dl-2.txt  output-dl-5.txt  run.sh  t.dump.load  t.dump.load.sum  t.dump.load.upd
tests/inputs/: t.lexer.inp
tests/outputs/: t.lexer.out
tests/t.systest.d/: Makefile.am  t.grftest
(+353 files in other folders)
